Changed font and file structure.

--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhruv Erry Portfolio - Windows XP</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -37,11 +40,13 @@
             <button class="start-button">
                 <img src="https://pbs.twimg.com/media/GDRrSKcX0AEZqkN.jpg" alt="Start" class="start-logo">
             </button>
-            <div class="taskbar-programs">
-                <!-- Running programs will appear here -->
-            </div>
-            <div class="system-tray">
-                <div class="clock" id="clock">12:00</div>
+            <div class="taskbar-middle-section">
+                <div class="taskbar-programs">
+                    <!-- Running programs will appear here -->
+                </div>
+                <div class="system-tray">
+                    <div class="clock" id="clock">12:00</div>
+                </div>
             </div>
         </div>
     </div>
