Added Band section

--- a/index.html
+++ b/index.html
@@ -12,26 +12,34 @@
 <body>
     <div class="desktop">
         <!-- Desktop Icons -->
-        <div class="desktop-icons">
-            <div class="desktop-icon" data-section="projects">
-                <img src="https://files.softicons.com/download/toolbar-icons/xp-artistic-icons-by-lokas-software/png/256x256/003-folder.png" alt="Projects">
-                <span>Projects</span>
+        <div class="desktop-icon-layout-container">
+            <div class="desktop-icons">
+                <div class="desktop-icon" data-section="projects">
+                    <img src="https://files.softicons.com/download/toolbar-icons/xp-artistic-icons-by-lokas-software/png/256x256/003-folder.png" alt="Projects">
+                    <span>Projects</span>
+                </div>
+                <div class="desktop-icon" data-section="experience">
+                    <img src="https://files.softicons.com/download/web-icons/webtoys-icons-by-artdesigner.lv/png/64x64/Case.png" alt="Experience" style="margin-bottom: 8px;">
+                    <span>Experience</span>
+                </div>
+                <div class="desktop-icon" data-section="skills">
+                    <img src="https://files.softicons.com/download/toolbar-icons/ravenna-3d-icons-by-double-j-design/png/256x256/Tools.png" alt="Skills" style="transform: scaleX(-1); margin-bottom: 12px;">
+                    <span>Skills</span>
+                </div>
             </div>
-            <div class="desktop-icon" data-section="experience">
-                <img src="https://files.softicons.com/download/web-icons/webtoys-icons-by-artdesigner.lv/png/64x64/Case.png" alt="Experience">
-                <span>Experience</span>
-            </div>
-            <div class="desktop-icon" data-section="skills">
-                <img src="https://files.softicons.com/download/toolbar-icons/ravenna-3d-icons-by-double-j-design/png/256x256/Tools.png" alt="Skills" style="transform: scaleX(-1);">
-                <span>Skills</span>
-            </div>
-            <div class="desktop-icon" data-section="education">
-                <img src="https://files.softicons.com/download/toolbar-icons/desktop-education-icons-by-aha-soft/png/96x96/education.png" alt="Education" style="transform: scaleX(-1);">
-                <span>Education</span>
-            </div>
-            <div class="desktop-icon" data-section="contact">
-                <img src="https://files.softicons.com/download/application-icons/48x48-free-object-icons-by-aha-soft/png/48/Phone.png" alt="Contact">
-                <span>Contact</span>
+            <div class="desktop-icons">
+                <div class="desktop-icon" data-section="education" style="margin-top: -12px;">
+                    <img src="https://files.softicons.com/download/toolbar-icons/desktop-education-icons-by-aha-soft/png/96x96/education.png" alt="Education" style="transform: scaleX(-1); width: 60px; height: 60px; margin-bottom: 4px;">
+                    <span>Education</span>
+                </div>
+                <div class="desktop-icon" data-section="contact">
+                    <img src="https://files.softicons.com/download/application-icons/48x48-free-object-icons-by-aha-soft/png/48/Phone.png" alt="Contact" style="width: 52px; height: 52px; margin-bottom: 4px;">
+                    <span>Contact</span>
+                </div>
+                <div class="desktop-icon" data-section="band">
+                    <img src="https://files.softicons.com/download/tv-movie-icons/back-to-the-future-icons-by-yellow-icon/png/256/guitar.png" alt="My Band" style="width: 56px; height: 56px; margin-bottom: 4px; position: relative; top: -4px;">
+                    <span>My Band</span>
+                </div>
             </div>
         </div>
 
