--- a/index.html
+++ b/index.html
@@ -9,13 +9,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <!-- Site icon -->
-    <link rel="icon" type="image/png" href="https://sdmntprwestcentralus.oaiusercontent.com/files/00000000-d170-61fb-8b8a-4db7597cb0d4/raw?se=2025-08-08T21%3A26%3A15Z&sp=r&sv=2024-08-04&sr=b&scid=f0eaf359-35df-5c0b-97ff-f019339eaf39&skoid=add8ee7d-5fc7-451e-b06e-a82b2276cf62&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-08-08T17%3A05%3A15Z&ske=2025-08-09T17%3A05%3A15Z&sks=b&skv=2024-08-04&sig=1h3asMyno1fVoNAEIQSj8raUk6M60wuKpmNFuPTGRyo%3D">
-    <link rel="apple-touch-icon" href="https://sdmntprwestcentralus.oaiusercontent.com/files/00000000-d170-61fb-8b8a-4db7597cb0d4/raw?se=2025-08-08T21%3A26%3A15Z&sp=r&sv=2024-08-04&sr=b&scid=f0eaf359-35df-5c0b-97ff-f019339eaf39&skoid=add8ee7d-5fc7-451e-b06e-a82b2276cf62&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-08-08T17%3A05%3A15Z&ske=2025-08-09T17%3A05%3A15Z&sks=b&skv=2024-08-04&sig=1h3asMyno1fVoNAEIQSj8raUk6M60wuKpmNFuPTGRyo%3D">
+    <link rel="icon" type="image/png" href="https://i.ibb.co/rfNq3fr6/image-removebg-preview.png">
+    <link rel="apple-touch-icon" href="https://i.ibb.co/rfNq3fr6/image-removebg-preview.png">
     <!-- Open Graph image for rich link previews -->
     <meta property="og:image" content="https://external-preview.redd.it/r6g38aXSaQWtd1KxwJbQ-Fs5jtSVDxX3wtLHJEdqixw.jpg?width=1080&crop=smart&auto=webp&s=87a2c94cb3e1561e2b6abd467ea68d81b9901720">
 </head>
 <body>
     <div class="desktop">
+        <div id="intro-video-overlay" class="intro-video-overlay" aria-hidden="true">
+            <video id="intro-video" class="intro-video" playsinline muted></video>
+            <div id="intro-tap-message" class="intro-tap-message">Tap to enter</div>
+        </div>
         <!-- Desktop Icons -->
         <div class="desktop-icon-layout-container">
             <div class="desktop-icons">
