--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@
             </div>
         </div>
 
+        <!-- Desktop Selection Box -->
+        <div class="desktop-selection-box" id="desktop-selection-box"></div>
+
         <!-- Taskbar -->
         <div class="taskbar">
             <button class="start-button">
