--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <div class="desktop">
         <div id="intro-video-overlay" class="intro-video-overlay" aria-hidden="true">
             <video id="intro-video" class="intro-video" playsinline muted></video>
-            <div id="intro-tap-message" class="intro-tap-message">Tap to enter</div>
+            <div id="intro-tap-message" class="intro-tap-message">
+                <span class="intro-tap-message-text">Click to enter</span>
+            </div>
         </div>
         <!-- Desktop Icons -->
         <div class="desktop-icon-layout-container">
