--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <!-- Site icon -->
     <link rel="icon" type="image/png" href="https://i.ibb.co/rfNq3fr6/image-removebg-preview.png">
     <link rel="apple-touch-icon" href="https://i.ibb.co/rfNq3fr6/image-removebg-preview.png">
+    <script defer src="https://cloud.umami.is/script.js" data-website-id="6ca61408-f454-4427-98a0-38d9d5acd7e5"></script>
     <!-- Open Graph image for rich link previews -->
     <meta property="og:image" content="https://external-preview.redd.it/r6g38aXSaQWtd1KxwJbQ-Fs5jtSVDxX3wtLHJEdqixw.jpg?width=1080&crop=smart&auto=webp&s=87a2c94cb3e1561e2b6abd467ea68d81b9901720">
 </head>
